# SnowdenCore

./: .gitignore  Cargo.toml  README.md  extract_pdfs.py  generate-hash.bash  hashes-merged.hash  justfile  main.py  pyproject.toml  shell.nix  validate-hash.bash  youtube-videos-to-mp3.json
src/: main.rs  video_generator.rs
